# calculator-gui-rs

./: .gitignore  Cargo.toml  README.md  index.html
.cargo/: config.toml
.github/: dependabot.yml
.github/terraform/: github.tf
.github/workflows/: audit-rust.yml  audit.yml  ci.yml  deployment.yml  static-analysis-rust.yml  static-analysis.yml
src/: button.rs  main.rs  operation.rs
