[package]
name = "calculator-gui-rs"
version = "1.0.0"
authors = ["Jérémy Audiger"]
edition = "2024"
rust-version = "1.90"

[dependencies]
bevy = "0.17.1"

[lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
lto = true
incremental = false
opt-level = "z"
panic = "abort"
strip = "symbols"
